# chatragi

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
chatragi.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: App-README.md  Chat-Memory-README.md  Chatbot-README.md  Config-README.md  DB-Utils-README.md  Document-Loader-README.md  Error-Handler-README.md  File-Watcher-README.md  KNOWN-ISSUES.md  Logger-Config-README.md  README-docs.md  Running-LLMs-Locally-README.md  Setting-LLM-README.md  architecture.md
notebook/: get_filenames.ipynb
src/chatragi/: app.py  cli.py  config.py  file_watcher.py
src/chatragi.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/chatragi/static/css/: styles.css
src/chatragi/static/js/: scripts.js
src/chatragi/templates/: index.html
src/chatragi/utils/: chat_memory.py  chatbot.py  db_utils.py  document_loader.py  error_handler.py  logger_config.py  persona.py
test/: check_storedDB.py  gpu_benchmark.py  gpu_layer_benchmark_results.csv
