[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chatragi"
version = "0.0.1"
authors = [
  { name = "Simer Singh Sethi", email = "simer@disruptivegeek.net" }
]
description = "ChatRagi - AI-Powered Local RAG Chatbot"
readme = "README.md"
requires-python = ">=3.8"

# Core dependencies for running ChatRagi
dependencies = [
  "chromadb",
  "flask",
  "pdfplumber",
  "llama-index",
  "llama-index-embeddings-huggingface",
  "llama-index-embeddings-ollama",
  "llama-index-vector-stores-chroma",
  "llama-index-llms-ollama",
  "tiktoken",
  "watchdog",
  "markdown",
  "python-dotenv",
  "numpy==1.26.4",
  "pandas"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
# Development tools for formatting, linting, and testing
dev = [
  "pytest",
  "black",
  "flake8",
  "isort",
  "mypy",
  "pre-commit"
]